--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<table border="0" width="700px;">
 				<tbody>
 						<tr>
-							<td colspan="3" align="center">JOGO DA VELHA-2020</td>
+							<td colspan="3" align="center">JOGO DAS VELHA-2020</td>
 						</tr>
 						<tr>
 							<td align="center">
